--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,143 @@
-/* Add CSS styling here */
+/*CSS Reset*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+*{
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+    max-width:100%;
+    /* border:1px solid grey; */
+}
+/*General Styles*/
+html{
+    font-size:62.5%;
+}
+body{
+    font-size:1.6rem;
+    line-height:1.5;
+    max-width:1200px;
+    border:2px solid black;
+}a{
+    padding:.5% 1% .5% 1%;
+    text-decoration: none;
+    border-top:2px solid rgb(0, 0, 0);
+    border-bottom:2px solid rgb(0, 0, 0);
+    border-left:1px solid rgb(0, 0, 0);
+    border-right:1px solid rgb(0, 0, 0);
+}
+
+h1{
+    font-size:5rem;
+    text-align:left;
+    margin:20px;
+}
+h2{
+    font-size:3.5rem;
+    text-align:center;
+}
+
+section{
+    padding:4% 0;
+}
+button{
+    padding:3% 5%;
+    margin-top:5%;
+    border:2px solid;
+    font-size:1.6rem;
+    
+}
+button:hover{
+    color:#0234c0;
+    background-color:#fff;
+}
+/* header style */
+header{
+    background-color:rgb(204, 204, 204);
+    padding:25px;
+}
+nav{
+    display:flex;
+    flex-direction:row;
+    margin-left:50px;
+}
+/* top style */
+.top{
+    border:2px solid;
+    margin:10px;
+    margin-top:20px;
+    display:flex;
+    padding:10px;
+    justify-content: space-between;
+    text-align:center;
+}
+.top .right{
+    padding:50px;
+    padding-right:150px;
+}
+.top .right button{
+    margin:10px;
+    margin-bottom:20px;
+}
+p{
+    text-align:center;
+}
+.top .left img{
+    width: 500px;
+}
+/* section a style */
+.a img{
+    width:250px;
+}
+.a .img{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+}
+
+.b img{
+    width:250px;
+}
+.b .img{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+}
+footer{
+    border:2px solid black;
+    margin:10px;
+    text-align:center;
+}
+footer h2{
+    margin: 40px;
+    margin-bottom:30px;
+}
+footer button{
+    margin-top:0px;
+    margin-bottom:40px;
+    padding-left:5%;
+    padding-right:5%;
+    padding-top:1%;
+    padding-bottom:1%;
+}
