--- a/style/index.css
+++ b/style/index.css
@@ -1,199 +1,89 @@
 /*CSS Reset*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 *{
     box-sizing: border-box;
-    padding:0;
-    margin:0;
-    max-width:100%;
-    /* border:1px solid grey; */
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
 }
-/*General Styles*/
+/* General Styles */
 html{
-    font-size:62.5%;
+    font-size: 62.5%;
 }
 body{
-    font-size:1.6rem;
-    line-height:1.5;
-    max-width:1200px;
-    border:2px solid black;
-}a{
-    padding:.5% 1% .5% 1%;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    background-color: #fffafa;
+    color: black;
+}
+a{
     text-decoration: none;
-    border-top:2px solid rgb(0, 0, 0);
-    border-bottom:2px solid rgb(0, 0, 0);
-    border-left:1px solid rgb(0, 0, 0);
-    border-right:1px solid rgb(0, 0, 0);
+    color: black;
 }
-
-h1{
-    font-size:5rem;
-    text-align:left;
-    margin:20px;
-}
-h2{
-    font-size:3.5rem;
-    text-align:center;
-}
-
-section{
-    padding:4% 0;
-}
-button{
-    padding:3% 5%;
-    margin-top:5%;
-    border:2px solid;
-    font-size:1.6rem;
-    
-}
-button:hover{
-    color:#0234c0;
-    background-color:#fff;
-}
-/* header style */
+/* Header Styles */
 header{
-    background-color:rgb(204, 204, 204);
-    padding:25px;
+    background-color: rgb(230, 230, 230);
 }
-nav{
-    display:flex;
-    flex-direction:row;
-    margin-left:50px;
+h1{
+    margin: 2%;
 }
-/* top style */
+header nav{
+    margin: 2%;
+    margin-left: 4%;
+    display: flex;
+
+}
+header nav a{
+    padding: 0 3%;
+    border: 1px solid black;
+    margin: 1%;
+}
+/* Top section styles */
 .top{
-    border:2px solid;
-    margin:10px;
-    margin-top:20px;
-    display:flex;
-    padding:10px;
-    justify-content: space-between;
-    text-align:center;
+    display: flex;
+    padding: 1%;
 }
 .top .right{
-    padding:50px;
-    padding-right:150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    margin: 0 3%;
 }
-.top .right button{
-    margin:10px;
-    margin-bottom:20px;
+.top .right a{
+    text-align: center;
+    margin: 3% 0%;
+    padding: 0 2%;
+    width: 19%;
+    border: 1px solid black;
 }
-p{
-    text-align:center;
+.projects{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-evenly;
 }
-.top .left img{
-    width: 500px;
+.project{
+    width: 23%;
 }
-/* section a style */
-.a img{
-    width:250px;
+.project p{
+    margin-bottom: 8%;
 }
-.a .img{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-}
-
-.b img{
-    width:250px;
-}
-.b .img{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-evenly;
-}
+/* Footer styles */
 footer{
-    border:2px solid black;
-    margin:10px;
-    text-align:center;
+    background-color: rgb(230, 230, 230);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 footer h2{
-    margin: 40px;
-    margin-bottom:30px;
+    margin-top: 5%;
+    margin-bottom: 1%;
 }
-footer button{
-    margin-top:0px;
-    margin-bottom:40px;
-    padding-left:5%;
-    padding-right:5%;
-    padding-top:1%;
-    padding-bottom:1%;
-}
-@media(max-width:500px){
-    h1{
-        text-align: center;
-    }
-    nav{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        margin: 0;
-        margin-left: 30%;
-        width: 40%;
-        justify-content: center;
-    }
-    .top{
-        display: flex;
-        flex-direction: column;
-    }
-    .right{
-        margin: 0;
-        padding: 0;
-        margin-left: 20%;
-    }
-    .img {
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-@media(max-width:800px){
-    h1{
-        text-align: center;
-    }
-    nav{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        margin: 0;
-        margin-left: 30%;
-        width: 40%;
-        justify-content: center;
-    }
-    .top{
-        display: flex;
-        flex-direction: column;
-    }
-    .right{
-        margin: 0;
-        padding: 0;
-        margin-left: 20%;
-    }
-    .img {
-        display: flex;
-        flex-wrap: wrap;
-        width: 50%;
-        margin-left: 25%;
-    }
+footer a{
+    padding: 1%;
+    width: 10%;
+    text-align: center;
+    margin-bottom: 5%;
+    border: 1px solid black;
 }
