--- a/style/index.css
+++ b/style/index.css
@@ -87,3 +87,56 @@ footer a{
     margin-bottom: 5%;
     border: 1px solid black;
 }
+/* Media queries */
+@media(max-width:500px){
+    header {
+        text-align: center;
+    }
+    header nav{
+        display: flex;
+        flex-direction: column;
+    }
+    header nav a{
+        margin-left: 36.5%;
+        width: 25%;
+    }
+    .top{
+        flex-direction: column;
+    }
+    .top h2, .top p{
+        text-align: center;
+    }
+    .top a{
+        display: block;
+        text-align: center;
+    }
+    .project{
+        width: 45%;
+    }
+}
+@media(max-width:800px){
+    header {
+        text-align: center;
+    }
+    header nav{
+        display: flex;
+        flex-direction: column;
+    }
+    header nav a{
+        margin-left: 36.5%;
+        width: 25%;
+    }
+    .top{
+        flex-direction: column;
+    }
+    .top h2, .top p{
+        text-align: center;
+    }
+    .top a{
+        display: block;
+        text-align: center;
+    }
+    .project{
+        width: 45%;
+    }
+}
